[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }

