[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
mongodb = { version = "2.6.0", default-features = false, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.8"